--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
             <artifactId>gherkin</artifactId>
             <version>31.0.0</version>
         </dependency>
+        <dependency>
+    <groupId>com.github.javafaker</groupId>
+    <artifactId>javafaker</artifactId>
+    <version>1.0.2</version>
+</dependency>
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
